[package]
name = "zero_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
cbc = "0.1"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
argon2 = "0.5"
pbkdf2 = "0.12"
tiny-bip39 = "2.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
thiserror = "1.0"
zeroize = "1.7"
k256 = { version = "0.13", features = ["ecdh"] }
aes-gcm = "0.10"
hkdf = "0.12"
cipher = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "kad", "mdns", "macros", "tokio"] }
futures = "0.3"
hex = "0.4"

[dev-dependencies]
proptest = "1.0"
